@@ -318,6 +318,7 @@ global:
 	mpd_song_get_pos;
 	mpd_song_get_id;
 	mpd_song_get_prio;
+	mpd_song_get_audio_format;
 	mpd_song_begin;
 	mpd_song_feed;
 	mpd_recv_song;
