@@ -1,6 +1,7 @@
 libmpdclient 2.15 (not yet released)
 * support MPD protocol 0.21
   - search: support search expressions
+  - song: audio format
 * fix `-Wrestrict` compiler warning
 
 libmpdclient 2.14 (2018/02/11)
